update :root and variables

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,10 @@
 <div class="ka-dody">
-  <app-sidebar-left></app-sidebar-left>
-  <div class="show-component">
-    
+  <div class="sidebar-left">
+    <app-sidebar-left></app-sidebar-left>
+  </div>
+  <div class="sidebar-component">
+    <p>
+      Component
+    </p>
   </div>
 </div>
