add font roboto

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,7 @@
   <div class="sidebar-left">
     <app-sidebar-left></app-sidebar-left>
   </div>
-  <div class="sidebar-component">
-    <p>
-      Component
-    </p>
+  <div class="detail-component">
+    <router-outlet></router-outlet>
   </div>
 </div>
