--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,13 +1,14 @@
-@import 'variables';
-
 // Fonction
 @import './functions/all';
+
+@import 'variables';
 
 // Mixin
 @import './mixins/all';
 
 // incluce common
 @import './reset';
+@import './helper';
 @import './common';
 
 // Component
