--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
-<p>
-  dashboard works!
-</p>
+<div class="_fluid">
+  <div class="_container main-detail">
+    <section class="ka-component _620">
+      <h1 class="_text-center">Welcome</h1>
+      <p>Welcome To <b>YAKA</b> Component</p>
+    </section>
+  </div>
+</div>
