--- a/src/assets/scss/mixins/root.scss
+++ b/src/assets/scss/mixins/root.scss
@@ -1,7 +1,10 @@
 @mixin root(){
-    --primari: $primary;
+    --primary: $primary;
     --secondary: $secondary;
     --support-yellow: $support-yellow;
     --support-pink: $support-pink;
     --dark: $dark;
+    --primary-70: $primary-70;
+    --primary-30: $primary-30;
+    --primary-8: $primary-8;
 }
