--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -1,8 +1,3 @@
-<div class="ka-menu">
-  <div class="title">
-    {{title}}
-  </div>
-  <ul>
-    <li *ngFor="let items of menuList"><a routerLink="{{items.linke}}" title="{{items.text}}">{{items.text}}</a></li>
-  </ul>
-</div>
+<p>
+  Menu works!
+</p>
