--- a/src/app/shares/sidebar-left/sidebar-left.component.html
+++ b/src/app/shares/sidebar-left/sidebar-left.component.html
@@ -1,8 +1,8 @@
 <div class="sidebar-detail">
   <div class="h1 ka-logo">
-    <img src="./assets/images/logo/logo.png" alt="">
+    <a routerLink='./'><img src="./assets/images/logo/logo.png" alt=""></a>
   </div>
-  <app-menu [title]="'Foundations'" [menuList]="linkModel"></app-menu>
-  <hr>
-  <app-menu [title]="'Components'" [menuList]="component"></app-menu>
+  <app-menu-shars [title]="'Foundations'" [menuList]="linkModel"></app-menu-shars>
+
+  <app-menu-shars [title]="'Components'" [menuList]="component"></app-menu-shars>
 </div>
