--- a/src/app/shares/footer/footer.component.html
+++ b/src/app/shares/footer/footer.component.html
@@ -1,5 +1,7 @@
 <div class="_fluid">
   <div class="_container">
-    Footer
+    <div class="ka-footer">
+        Copyright © 2018 YAKA Component
+    </div>
   </div>
 </div>
