--- a/src/app/shares/sidebar-left/sidebar-left.component.html
+++ b/src/app/shares/sidebar-left/sidebar-left.component.html
@@ -2,7 +2,7 @@
   <div class="h1 ka-logo">
     <a routerLink='./'><img src="./assets/images/logo/logo.png" alt=""></a>
   </div>
-  <app-menu-shars [title]="'Foundations'" [menuList]="linkModel"></app-menu-shars>
+  <ka-menus [title]="'Foundations'" [menuList]="linkModel"></ka-menus>
 
-  <app-menu-shars [title]="'Components'" [menuList]="component"></app-menu-shars>
+  <ka-menus [title]="'Components'" [menuList]="component"></ka-menus>
 </div>
