--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -76,7 +76,7 @@
 .ka-example {}
 
 .ex-code {
-  min-height: rem(220);
+  //min-height: rem(220);
   padding: rem(32) rem(22) rem(22) rem(22);
   border: rem(2) solid $dark-30;
   border-radius: rem(3);
