add input component

--- a/src/app/pages/button-link/button-link.component.html
+++ b/src/app/pages/button-link/button-link.component.html
@@ -1,42 +1,54 @@
 <div class="_fluid">
-    <div class="detail-header">
-      <img src="./assets/images/component/typography.svg" alt="">
+  <div class="detail-header">
+  </div>
+  <div class="_container main-detail">
+    <div class="ka-component _620">
+      <h1 class="_text-center">Buttons</h1>
+      <p>
+        Documentation and examples for Bootstrap typography, including global settings, headings, body text, lists, and more.
+      </p>
     </div>
-    <div class="_container main-detail">
-      <div class="ka-component _620">
-        <h1 class="_text-center">Buttons</h1>
-        <p>
-          Documentation and examples for Bootstrap typography, including global settings, headings, body text, lists, and more.
-        </p>
+    <div class="ka-component _620">
+      <h2 class="">Buttons</h2>
+      <p>
+        Documentation and examples typography, headings, body text, lists, and more.
+      </p>
+    </div>
+    <div class="ka-component ka-example">
+      <div class="ex-code">
+        <ka-button type='_primary'>Primary</ka-button>
+        <ka-button type='_secondary'>Secondary</ka-button>
+        <ka-button>Defualf</ka-button>
+        <ka-button type='_link'>Link</ka-button>
       </div>
-      <div class="ka-component _620">
-        <h2 class="">Buttons</h2>
-        <p>
-          Documentation and examples typography, headings, body text, lists, and more.
-        </p>
+    </div>
+    <div class="ka-component _620">
+      <h2 class="">Outlined</h2>
+      <p>
+        Documentation and examples typography, headings, body text, lists, and more.
+      </p>
+    </div>
+    <div class="ka-component ka-example">
+      <div class="ex-code">
+        <ka-button type='_primary-outline'>Primary</ka-button>
+        <ka-button type='_secondary-outline'>Secondary</ka-button>
+        <ka-button type='_defualf-outline'>Defualf</ka-button>
+        <ka-button type='_link'>Link</ka-button>
       </div>
-      <div class="ka-component ka-example">
-        <div class="ex-code">
-          <a class="button _primary">Primary</a>
-          <a class="button _secondary">Secondary</a>
-          <a class="button">Defualf</a>
-          <a class="button _link">Link</a>
-        </div>
+    </div>
+    <div class="ka-component _620">
+      <h2 class="">Disabled</h2>
+      <p>
+        Documentation and examples typography, headings, body text, lists, and more.
+      </p>
+    </div>
+    <div class="ka-component ka-example">
+      <div class="ex-code">
+        <ka-button type='_primary-outline' disabled>Primary</ka-button>
+        <ka-button type='_secondary-outline' disabled>Secondary</ka-button>
+        <ka-button type='_defualf-outline' disabled>Defualf</ka-button>
+        <ka-button type='_link' disabled>Link</ka-button>
       </div>
-      <div class="ka-component _620">
-          <h2 class="">Buttons Outlined</h2>
-          <p>
-            Documentation and examples typography, headings, body text, lists, and more.
-          </p>
-        </div>
-        <div class="ka-component ka-example">
-          <div class="ex-code">
-            <a class="button _primary-outline">Primary</a>
-            <a class="button _secondary-outline">Secondary</a>
-            <a class="button _defualf-outline">Defualf</a>
-            <a class="button _link">Link</a>
-          </div>
-        </div>
     </div>
   </div>
-  
+</div>
