--- a/src/app/component/ka-button/ka-button.component.html
+++ b/src/app/component/ka-button/ka-button.component.html
@@ -1,3 +1,3 @@
-<p>
-  ka-button works!
-</p>
+<button class="button" [ngClass]="type" [disabled]="disabled">
+  <ng-content></ng-content>
+</button>
