--- a/src/app/component/ka-forms/ka-forms.component.html
+++ b/src/app/component/ka-forms/ka-forms.component.html
@@ -1,3 +1,9 @@
-<p>
-  ka-forms works!
-</p>
+<div class="ka-form" >
+  <input (click)="toggleClick()" (blur)="toggleBlur()" (focus)="toggleClick()" type="{{type}}"
+          [(ngModel)]="model"
+          id="{{gName}}"
+          name="{{gName}}"
+          autocomplete="off"
+          [required]="required">
+  <label for="{{gName}}" [ngClass]="{'_valid': aClass}">{{title}}</label>
+</div>
