--- a/src/app/pages/forms/forms.component.html
+++ b/src/app/pages/forms/forms.component.html
@@ -18,18 +18,18 @@
       <div class="ex-code">
         <div class="row">
           <div class="column">
-            <ka-forms [title]="'Full Name'" [model]="model" [type]="'text'" required></ka-forms>
+            <ka-input [title]="'Full Name'" [model]="model" [type]="'text'" required></ka-input>
           </div>
           <div class="column">
-            <ka-forms [title]="'User'" [model]="model2" [type]="'text'"></ka-forms>
+            <ka-input [title]="'User'" [model]="model2" [type]="'text'"></ka-input>
           </div>
         </div>
         <div class="row">
           <div class="column">
-            <ka-forms [title]="'Password'" [model]="model3" [type]="'text'"></ka-forms>
+            <ka-input [title]="'Password'" [model]="model3" [type]="'text'"></ka-input>
           </div>
           <div class="column">
-            <ka-forms [title]="'Confirm Password'" [model]="model3" [type]="'text'"></ka-forms>
+            <ka-input [title]="'Confirm Password'" [model]="model3" [type]="'text'"></ka-input>
           </div>
         </div>
 
