--- a/src/app/component/ka-checkbox/ka-checkbox.component.html
+++ b/src/app/component/ka-checkbox/ka-checkbox.component.html
@@ -1,3 +1,4 @@
-<p>
-  ka-checkbox works!
-</p>
+<div class="ka-form _checkbox">
+  <input type="checkbox" [ngModel]="model" name="{{gName}}" id="{{gName}}">
+  <label class="checkbox" for="{{gName}}">{{title}}</label>
+</div>
