--- a/src/app/component/ka-radio/ka-radio.component.html
+++ b/src/app/component/ka-radio/ka-radio.component.html
@@ -1,3 +1,4 @@
-<p>
-  ka-radio works!
-</p>
+<div class="ka-form _radio">
+  <input type="radio" [(ngModel)]="model" [value]="value" [name]="groupName" [id]="gName"  [required]="required">
+  <label class="radio" [for]="gName">{{title}}</label>
+</div>
