--- a/src/app/pages/button-link/button-link.component.html
+++ b/src/app/pages/button-link/button-link.component.html
@@ -37,6 +37,24 @@
       </div>
     </div>
     <div class="ka-component _620">
+      <h2 class="">Block</h2>
+      <p>
+        Documentation and examples typography, headings, body text, lists, and more.
+      </p>
+    </div>
+    <div class="ka-component ka-example">
+      <div class="ex-code _button">
+        <ka-button type='_primary _block'>Primary</ka-button>
+        <ka-button type='_secondary _block'>Secondary</ka-button>
+        <ka-button type='_defualf _block'>Defualf</ka-button>
+        <ka-button type='_primary-outline _block'>Primary</ka-button>
+        <ka-button type='_secondary-outline _block'>Secondary</ka-button>
+        <ka-button type='_defualf-outline _block'>Defualf</ka-button>
+        <ka-button type='_link _block'>Link</ka-button>
+        <ka-button type='_link _block' disabled>Disabled</ka-button>
+      </div>
+    </div>
+    <div class="ka-component _620">
       <h2 class="">Disabled</h2>
       <p>
         Documentation and examples typography, headings, body text, lists, and more.
