--- a/src/app/pages/dropdown/dropdown.component.html
+++ b/src/app/pages/dropdown/dropdown.component.html
@@ -1,3 +1,36 @@
-<p>
-  dropdown works!
-</p>
+<div class="_fluid">
+  <div class="detail-header">
+  </div>
+  <div class="_container main-detail">
+    <div class="ka-component _620">
+      <h1 class="_text-center">Dropdown</h1>
+      <p>
+        Documentation and examples for Bootstrap typography, including global settings, headings, body text, lists, and more.
+      </p>
+    </div>
+    <div class="ka-component _620">
+      <h2 class="">Dropdown</h2>
+      <p>
+        Documentation and examples typography, headings, body text, lists, and more.
+      </p>
+    </div>
+    <div class="ka-component ka-example">
+      <div class="ex-code">
+        <div class="row">
+          <div class="column">
+            <div class="ka-dropdown">
+                <button class="button _secondary-outline _block">Dropdown</button>
+              <!-- <ka-button type='_secondary-outline _block' >Dropdown</ka-button> -->
+              <ul class="list">
+                <li><a href="" class='button _link _block'>Logo Guide line</a></li>
+                <li><a href="" class='button _link _block'>Color Palette</a></li>
+                <li><a href="" class='button _link _block'>Typo Graphy</a></li>
+                <li><a href="" class='button _link _block'>Icons</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
