--- a/src/assets/scss/_helper.scss
+++ b/src/assets/scss/_helper.scss
@@ -20,3 +20,10 @@
 ._font-black {
     font-weight: $font-black;
 }
+
+._mg-b16 {
+    margin-bottom: rem(16) !important;
+}
+._mg-b32 {
+    margin-bottom: rem(32) !important;
+}
