--- a/src/app/component/ka-input/ka-input.component.html
+++ b/src/app/component/ka-input/ka-input.component.html
@@ -1,10 +1,5 @@
-<div class="ka-form" >
-    <input (click)="toggleClick()" (blur)="toggleBlur()" (focus)="toggleClick()" type="{{type}}"
-            [(ngModel)]="model"
-            id="{{gName}}"
-            name="{{gName}}"
-            autocomplete="off"
-            [required]="required">
-    <label for="{{gName}}" [ngClass]="{'_valid': aClass}">{{title}}</label>
-  </div>
-  
+<div class="ka-form _input">
+  <input (click)="toggleClick()" (blur)="toggleBlur()" (focus)="toggleClick()" type="{{type}}" [(ngModel)]="model" id="{{gName}}"
+    name="{{gName}}" autocomplete="off" [required]="required">
+  <label for="{{gName}}" [ngClass]="{'_valid': aClass}">{{title}}</label>
+</div>
