--- a/src/assets/scss/_common.scss
+++ b/src/assets/scss/_common.scss
@@ -97,6 +97,11 @@
   }
 }
 
+// support only show in example button block
+.ex-code._button button {
+  margin-bottom: rem(16);
+}
+
 .ka-footer {
   width: 100%;
   height: rem(320);
