--- a/src/assets/scss/components/forms.scss
+++ b/src/assets/scss/components/forms.scss
@@ -1,22 +1,21 @@
-.ka-form {
+.ka-form._input {
   position: relative;
   label {
     font-size: rem(18);
     position: absolute;
     top: rem(12);
     left: rem(8);
-    color: $dark-70;
+    color: $dark-30;
     transition: all 0.1s;
     z-index: 1;
-
     &._valid {
       font-size: rem(13);
       top: rem(4);
       color: $dark-70;
     }
   }
-  input {
-      position: relative;
+  input[type=text] {
+    position: relative;
     background: #fff !important;
     display: block;
     width: 100%;
@@ -31,14 +30,127 @@
       border: rem(1) solid $primary-70;
       box-shadow: 0 0 0 rem(3) $primary-30;
     }
+  }
+}
 
-    // &:focus ~ label,
-    // &:valid ~ label {
-    //   font-size: rem(13);
-    //   top: rem(4);
-    //   color: $dark-70;
-    // }
-    
-    
+.ka-form._checkbox {
+  input[type=checkbox] {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    &:checked~.checkbox:after {
+      border-radius: rem(1);
+      content: "";
+      position: absolute;
+      top: rem(3);
+      left: rem(7);
+      width: rem(6);
+      height: rem(12); // border: rem(3) solid transparent;
+      border-bottom: rem(3) solid $secondary-70;
+      border-right: rem(3) solid $secondary-70;
+      transform: rotate(45deg);
+    }
+    &:focus~.checkbox:before,
+    &:active~.checkbox:before {
+      border: rem(1) solid $primary-70;
+      box-shadow: 0 0 0 rem(3) $primary-30;
+    }
+  }
+  .checkbox {
+    position: relative;
+    padding-left: rem(32);
+    user-select: none;
+    &:focus {
+      outline: rem(1) dotted $primary !important;
+    }
+    &:before {
+      background: $light;
+      border-radius: rem(2);
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: rem(20);
+      height: rem(20);
+      border: rem(1) solid $secondary-30;
+    }
+  }
+}
+
+.ka-form._radio {
+  input[type=radio] {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+    &:checked~.radio:after {
+      border-radius: 100%;
+      content: "";
+      position: absolute;
+      z-index: 1;
+      top: rem(6);
+      left: rem(6);
+      width: rem(8);
+      height: rem(8);
+      background: $secondary-70;
+    }
+    &:focus~.radio:before,
+    &:active~.radio:before {
+      border: rem(1) solid $primary-70;
+      box-shadow: 0 0 0 rem(3) $primary-30;
+    }
+  }
+  .radio {
+    display: inline-block;
+    position: relative;
+    padding-left: rem(32);
+    user-select: none;
+    &:before {
+      background: $light;
+      border-radius: 100%;
+      content: "";
+      display: block;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: rem(20);
+      height: rem(20);
+      border: rem(1) solid $secondary-30;
+    }
+  }
+}
+
+.ka-form._textarea {
+  position: relative;
+  label {
+    font-size: rem(18);
+    position: absolute;
+    top: rem(8);
+    left: rem(8);
+    color: $dark-30;
+    transition: all 0.1s;
+    z-index: 1;
+    &._valid {
+      font-size: rem(13);
+      top: rem(8);
+      color: $dark-70;
+    }
+  }
+  textarea {
+    position: relative;
+    background: #fff !important;
+    display: block;
+    width: 100%;
+    outline: none;
+    border-radius: rem(3);
+    font-size: rem(16);
+    min-height: rem(120);
+    padding: rem(24) rem(8) rem(4) rem(8);
+    border: rem(1) solid $secondary-30;
+    &:focus,
+    &:active {
+      border: rem(1) solid $primary-70;
+      box-shadow: 0 0 0 rem(3) $primary-30;
+    }
   }
 }
