--- a/src/app/pages/dropdown/dropdown.component.html
+++ b/src/app/pages/dropdown/dropdown.component.html
@@ -19,13 +19,58 @@
         <div class="row">
           <div class="column">
             <div class="ka-dropdown">
-                <button class="button _secondary-outline _block">Dropdown</button>
-              <!-- <ka-button type='_secondary-outline _block' >Dropdown</ka-button> -->
+              <button class="ka-button _secondary-outline _block">Dropdown</button>
               <ul class="list">
-                <li><a href="" class='button _link _block'>Logo Guide line</a></li>
-                <li><a href="" class='button _link _block'>Color Palette</a></li>
-                <li><a href="" class='button _link _block'>Typo Graphy</a></li>
-                <li><a href="" class='button _link _block'>Icons</a></li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Logo Guide line</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Color Palette</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Typo Graphy</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Icons</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column">
+            <div class="ka-dropdown">
+              <button class="ka-button _primary _block">Dropdown</button>
+              <ul class="list">
+                <li>
+                  <a href="" class='ka-button _link _block'>Logo Guide line</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Color Palette</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Typo Graphy</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Icons</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="column">
+            <div class="ka-dropdown">
+              <button class="ka-button _link _block">Dropdown</button>
+              <ul class="list">
+                <li>
+                  <a href="" class='ka-button _link _block'>Logo Guide line</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Color Palette</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Typo Graphy</a>
+                </li>
+                <li>
+                  <a href="" class='ka-button _link _block'>Icons</a>
+                </li>
               </ul>
             </div>
           </div>
