--- a/src/app/component/ka-button/ka-button.component.html
+++ b/src/app/component/ka-button/ka-button.component.html
@@ -1,3 +1,3 @@
-<button class="button" [ngClass]="type" [disabled]="disabled">
+<button class="ka-button" [ngClass]="type" [disabled]="disabled">
   <ng-content></ng-content>
 </button>
