--- a/src/app/pages/dropdown/dropdown.component.html
+++ b/src/app/pages/dropdown/dropdown.component.html
@@ -18,61 +18,7 @@
       <div class="ex-code">
         <div class="row">
           <div class="column">
-            <div class="ka-dropdown">
-              <button class="ka-button _secondary-outline _block">Dropdown</button>
-              <ul class="list">
-                <li>
-                  <a href="" class='ka-button _link _block'>Logo Guide line</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Color Palette</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Typo Graphy</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Icons</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="column">
-            <div class="ka-dropdown">
-              <button class="ka-button _primary _block">Dropdown</button>
-              <ul class="list">
-                <li>
-                  <a href="" class='ka-button _link _block'>Logo Guide line</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Color Palette</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Typo Graphy</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Icons</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="column">
-            <div class="ka-dropdown">
-              <button class="ka-button _link _block">Dropdown</button>
-              <ul class="list">
-                <li>
-                  <a href="" class='ka-button _link _block'>Logo Guide line</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Color Palette</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Typo Graphy</a>
-                </li>
-                <li>
-                  <a href="" class='ka-button _link _block'>Icons</a>
-                </li>
-              </ul>
-            </div>
+            <ka-dropdown style="" [model]=""></ka-dropdown>
           </div>
         </div>
       </div>
