--- a/src/app/component/ka-dropdown/ka-dropdown.component.html
+++ b/src/app/component/ka-dropdown/ka-dropdown.component.html
@@ -1,3 +1,19 @@
-<p>
-  ka-dropdown works!
-</p>
+<div class="ka-dropdown">
+  <button class="ka-button _secondary-outline _block" dropdown>
+    Dropdown
+  </button>
+  <ul class="list">
+    <li>
+      <a href="" class='ka-button _link _block'>Logo Guide line</a>
+    </li>
+    <li>
+      <a href="" class='ka-button _link _block'>Color Palette</a>
+    </li>
+    <li>
+      <a href="" class='ka-button _link _block'>Typo Graphy</a>
+    </li>
+    <li>
+      <a href="" class='ka-button _link _block'>Icons</a>
+    </li>
+  </ul>
+</div>
