--- a/src/assets/scss/components/dropdown.scss
+++ b/src/assets/scss/components/dropdown.scss
@@ -1,4 +1,5 @@
 .ka-dropdown {
+  position: relative;
   >.ka-button {
     text-align: left;
   }
@@ -6,12 +7,18 @@
       background: $light;
   }
   >.list {
+    width: 100%;
+    position: absolute;
     margin-top: rem(3);
     border-radius: rem(3);
     background: $light;
     padding: rem(6) 0;
     border: rem(1) solid $primary;
     box-shadow: 0 0 0 rem(3) $primary-30;
+    //display: none;
+    &.show {
+      display: block;
+    }
     a {
       text-decoration: none !important;
       text-align: left;
